name:                lecture
version:             2.0.0.0
homepage:            https://github.com/fpclass/lecture22#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           Copyright 2020 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     List, Writer, State, Monad, Do
  build-depends:       base >= 4.7 && < 5, random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpclass/lecture22
